versioned_docs/version-15.2.0/products/catalog/basic-concepts/60_relationships.md
---
id: relationships
title: Relationships
sidebar_label: Relationships
---

# Relationships

A **relationship** is a typed, directed link between a *source* item and a *target* item. Relationships form a graph layered on top of the catalog's items: they let you traverse from a deployment to the environment it targets, from a vulnerability to the artifacts it affects, and so on.

:::note
Item ownership and followers (see [Items](/products/catalog/basic-concepts/10_items.md#ownership-and-followers)) are **not** modeled as relationships: they are plain email fields on the item. They used to be built-in relationship types (`ownership.mia-platform.eu` and `follow.mia-platform.eu`) navigable in this graph, and are expected to return here once owners/followers are resolved to first-class User items.
:::

The catalog models relationships with three built-in kinds:

- `RelationshipType` — declares a *type* of connection (its semantic, plus the labels used to read it in each direction).
- `RelationshipConstraint` — declares which item kinds *may* participate as source and target of a given relationship type.
- `Relationship` — the actual instance linking two specific items through a relationship type.

All three are themselves catalog items, governed by Item Type Definitions under the `mia-platform.eu/v1alpha1` group, and exposed at fixed paths on the [Catalog API](/products/catalog/usage/catalog-api.md#resource-uris).

## RelationshipType

A `RelationshipType` defines the *vocabulary* of a connection. It carries the labels used by the UI to phrase the relationship from each endpoint's perspective.

```yaml
apiVersion: mia-platform.eu/v1alpha1
kind: RelationshipType
metadata:
  name: part-of.mia-platform.eu
spec:
  names:
    sourceToTarget: is part of
    targetToSource: contains
```

Required fields:

- `spec.names.sourceToTarget` — how the relationship reads from the source toward the target (e.g. *"is part of"*, *"depends on"*, *"owns"*).
- `spec.names.targetToSource` — the reverse reading (e.g. *"contains"*, *"is a dependency of"*, *"is owned by"*).

## RelationshipConstraint

A `RelationshipConstraint` declares which item kinds may legitimately participate in a relationship of a given type. It is the catalog's way to *document* the intended shape of the graph.

```yaml
apiVersion: mia-platform.eu/v1alpha1
kind: RelationshipConstraint
metadata:
  name: part-of-service-in-domain
spec:
  relationshipTypeRef: urn:mia-platform-catalog:mia-platform.eu:v1alpha1:RelationshipType:part-of.mia-platform.eu
  sourceType: urn:mia-platform-catalog:mia-platform.eu:v1:Service
  targetType: urn:mia-platform-catalog:mia-platform.eu:v1:Domain
```

Required fields:

- `spec.relationshipTypeRef` — URN of the relationship type the constraint is about.
- `spec.sourceType` *(optional)* — URN of an item type (a *family selector*: URN without the trailing `:<name>`) that the source must belong to.
- `spec.targetType` *(optional)* — same, for the target item type.

Omitting `sourceType` or `targetType` leaves the corresponding side unconstrained.

:::note
Constraints are **permissive, not restrictive**: the catalog does not reject a `Relationship` whose source/target kinds do not match any registered constraint. Constraints are intended to (a) document intent for humans and tooling, and (b) drive graph traversal heuristics in the Catalog App. They are not a validation gate.
:::

## Relationship

A `Relationship` is the actual edge: it pairs a source item URN with a target item URN through a relationship type URN.

```yaml
apiVersion: mia-platform.eu/v1alpha1
kind: Relationship
metadata:
  name: api-gateway-part-of-platform-domain
spec:
  typeRef: urn:mia-platform-catalog:mia-platform.eu:v1alpha1:RelationshipType:part-of.mia-platform.eu
  sourceRef: urn:mia-platform-catalog:console.mia-platform.eu:v1:Service:api-gateway
  targetRef: urn:mia-platform-catalog:mia-platform.eu:v1:Domain:platform-domain
```

Required fields:

- `spec.typeRef` — URN of the `RelationshipType`. Note this is `typeRef` here, unlike the `relationshipTypeRef` field on a `RelationshipConstraint`.
- `spec.sourceRef` — URN of the source item.
- `spec.targetRef` — URN of the target item.

### Validation

When a `Relationship` is created or updated, the catalog validates only the **URN format** of `sourceRef` and `targetRef`. It does *not* check that the referenced items actually exist, nor that their kinds satisfy any matching `RelationshipConstraint`. This is consistent with the broader [item-reference policy](/products/catalog/basic-concepts/10_items.md#referencing-other-items): references are loosely coupled by design, so that items can be created in any order and dangling references can be repaired without coordinated writes.

## Querying the graph

Once relationships exist, you can navigate them through:

- the **Relationships** tab of any item in the [Catalog App](/products/catalog/usage/catalog-app.md), as a table or as a visual graph;
- the `related` operator of the Catalog [Query Language](/products/catalog/basic-concepts/70_query-language.md), to express queries such as *"all services part of domain X"* or *"all items affected by vulnerability Y"*.

## See also

- [Items](/products/catalog/basic-concepts/10_items.md): the entities relationships connect.
- [Item Types](/products/catalog/basic-concepts/20_item-types.md): how to introduce new kinds that participate in the graph.
- [Query Language](/products/catalog/basic-concepts/70_query-language.md): how to traverse relationships in queries.
